openapi and a little fixes
